frontend-clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend  # This label should match the one in your Deployment or Pod
  ports:
    - protocol: TCP
      port: 80            # Service is accessible internally on this port
      targetPort: 80      # Forwards to this port on the container
  type: ClusterIP         # Optional, default is ClusterIP
