ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
spec:
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /homepage
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
